--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "node-mic-record": "0.0.1",
+    "pug": "^3.0.0",
     "request": "^2.88.2"
   }
 }
