--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "node-mic-record": "0.0.1",
     "pug": "^3.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "win-audio": "^2.0.2"
   }
 }
