--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "divia-api": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-key-sender": "^1.0.11",
+    "node-media-controller": "0.0.6",
     "node-mic-record": "0.0.1",
     "pug": "^3.0.0",
     "request": "^2.88.2",
