--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   "dependencies": {
     "@tensorflow-models/speech-commands": "^0.5.2",
     "@tensorflow/tfjs": "^2.8.6",
+    "bootstrap": "^4.6.0",
+    "copy-webpack-plugin": "^7.0.0",
     "divia-api": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "node-key-sender": "^1.0.11",
     "node-media-controller": "0.0.6",
     "node-mic-record": "0.0.1",
+    "popper.js": "^1.16.1",
     "pug": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -41,8 +45,11 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
     "electron": "^11.3.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
     "style-loader": "^2.0.0",
+    "svg-loader": "0.0.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0"
   }
