--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "author": "gauthier-th",
   "license": "MIT",
   "dependencies": {
+    "@gauthier-th/bad-tv-shader": "^1.0.0",
     "@tensorflow-models/speech-commands": "^0.5.2",
     "@tensorflow/tfjs": "^2.8.6",
     "bootstrap": "^4.6.0",
     "copy-webpack-plugin": "^7.0.0",
+    "dat.gui": "^0.7.7",
     "divia-api": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -33,6 +35,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "request": "^2.88.2",
+    "three": "^0.83.0",
     "win-audio": "^2.0.2"
   },
   "bugs": {
