--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pug": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "request": "^2.88.2",
     "three": "^0.83.0",
     "win-audio": "^2.0.2"
